--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-port = 3000;
-db_url = mongodb+srv://mittalshally30:Shally@3009@asapproject.2ppbh.mongodb.net/
-private_key = secretkeykey
+PORT=8080
+DB_URL=mongodb+srv://mittalshally30:Shally%403009@asapproject.2ppbh.mongodb.net/
+PRIVATE_KEY=secretkeykey
